MudTabs: Fix overflow when using high border radius values (#8561)

--- a/src/MudBlazor/Styles/components/_tabs.scss
+++ b/src/MudBlazor/Styles/components/_tabs.scss
@@ -22,6 +22,7 @@
 
   &.mud-tabs-rounded {
     border-radius: var(--mud-default-borderradius);
+    overflow: hidden;
 
     .mud-tabs-toolbar {
       border-radius: var(--mud-default-borderradius);
